<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ghostWhite"
    tools:context=".login.Profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/nyumba"/>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">


            <EditText
                android:id="@+id/occupation"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:background="@drawable/edittexts"
                android:hint="@string/occupation"/>


            <TextView
                android:id="@+id/gender"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/male_female"/>
            <RadioGroup
                android:id="@+id/gender_radio"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:background="@drawable/edittexts_radio"

                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/male"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Male"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:onClick="onRadioButton_gender_Clicked"/>


                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Female"
                    android:layout_gravity="center"
                    android:onClick="onRadioButton_gender_Clicked"/>

            </RadioGroup>



            <TextView
                android:id="@+id/marital_status"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/yes_no"/>

            <RadioGroup
                android:id="@+id/marraige_status_radio"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"
                android:background="@drawable/edittexts_radio"

                android:gravity="center"
                android:tooltipText="Are you married"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="Yes"
                    android:layout_marginRight="20dp"
                    android:layout_gravity="center"
                    android:onClick="onRadioButton_marrital_status_Clicked"/>

                <RadioButton
                    android:id="@+id/no"

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="No"
                    android:layout_gravity="center"
                    android:onClick="onRadioButton_marrital_status_Clicked"/>

            </RadioGroup>

            <EditText
                android:id="@+id/wife_id_no"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:visibility="gone"
                android:background="@drawable/edittexts"
                android:hint="@string/wife_id_no"/>

            <EditText
                android:id="@+id/no_of_children"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:background="@drawable/edittexts"
                android:hint="@string/no_of_children"/>

<LinearLayout
    android:id="@+id/emergency_contact_info"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:background="@drawable/edittexts">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/emergency_contacts"/>

        <ImageView
            android:id="@+id/emergency_drop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/arrow_down"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/emerge"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:orientation="vertical"
        android:background="@color/view_black"
        >
        <EditText
            android:id="@+id/primary_contact_name"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:minWidth="100dp"

            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="3"
            android:gravity="center"
            android:textColor="@color/black"
            android:hint="name"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout2"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:minHeight="40dp"
            android:maxHeight="45dp"   >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:text="+254"
                android:textColor="@color/black"
                android:textSize="13.8sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.8"
                app:layout_constraintHorizontal_bias="0.366"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                />

            <EditText
                android:id="@+id/primary_contact_phonenumber"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:hint="7********"
                android:inputType="number"
                android:textSize="14dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.7"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>



        <EditText
            android:id="@+id/primary_contact_id"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:minWidth="100dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="3"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:hint=" Id number"/>

        <EditText
            android:id="@+id/primary_contact_relationship"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:minWidth="100dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_weight="3"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:hint="Relationship"/>



    </LinearLayout>


</LinearLayout>






        </LinearLayout>


        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:visibility="gone" />
                <Button
                    android:id="@+id/update_profile"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/edittexts_radio"
                    android:textColor="@color/black"
                    android:text="update"/>
            </LinearLayout>


            <TextView
                android:id="@+id/terms_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"

                android:text="Terms Policy"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="100dp"
                    android:text="@string/Account"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>



