<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:src="@drawable/nyumba"/>

        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout2"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@drawable/edittexts_username"
                android:gravity="center"
                android:layout_gravity="center"
                android:minHeight="40dp"
                android:maxHeight="45dp"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"

                app:layout_constraintWidth_percent="0.68">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:text="+254"
                    android:textColor="@color/ghostWhite"
                    android:textSize="13.8sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.8"
                    app:layout_constraintHorizontal_bias="0.366"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.5"
                    />

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:hint="7********"
                    android:inputType="number"
                    android:text="713836954"
                    android:textSize="14dp"
                    android:textAlignment="center"
                    android:textColor="@color/ghostWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.7"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1" />

            </androidx.constraintlayout.widget.ConstraintLayout>



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passWord"
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:paddingLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/ghostWhite"

                    android:text="Lucky270,2053"
                    android:background="@drawable/edittexts_username"
                    android:inputType="textPassword"
                    android:hint="Password"/>
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/login_loginScreen"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/login_background"
                android:textColor="@color/black"
                android:text="@string/login"/>

            <ProgressBar
                android:id="@+id/login_progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>



        </LinearLayout>

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/Forgot"/>

            <TextView
                android:id="@+id/signUp_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/signup"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp">


            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>